--- a/templates/admin_recipes.html
+++ b/templates/admin_recipes.html
@@ -14,67 +14,35 @@
             </div>
             
             <!-- Statistics Cards -->
-            <div class="row mb-4">
-                <div class="col-md-3 col-sm-6 mb-3">
-                    <div class="card bg-primary text-white">
-                        <div class="card-body">
-                            <div class="d-flex justify-content-between">
-                                <div>
-                                    <h4>{{ total_recipes }}</h4>
-                                    <p class="mb-0">Total Recipes</p>
-                                </div>
-                                <div class="align-self-center">
-                                    <i class="bi bi-book"></i>
-                                </div>
-                            </div>
+            <div class="row mb-3">
+                <div class="col-md-3 col-sm-6 mb-2">
+                    <div class="card shadow-sm">
+                        <div class="card-body py-2 px-2 text-center">
+                            <h6 class="mb-0">{{ total_recipes }} Total Recipes</h6>
                         </div>
                     </div>
                 </div>
                 
-                <div class="col-md-3 col-sm-6 mb-3">
-                    <div class="card bg-success text-white">
-                        <div class="card-body">
-                            <div class="d-flex justify-content-between">
-                                <div>
-                                    <h4>{{ public_recipes }}</h4>
-                                    <p class="mb-0">Public Recipes</p>
-                                </div>
-                                <div class="align-self-center">
-                                    <i class="bi bi-globe"></i>
-                                </div>
-                            </div>
+                <div class="col-md-3 col-sm-6 mb-2">
+                    <div class="card shadow-sm border-success">
+                        <div class="card-body py-2 px-2 text-center">
+                            <h6 class="mb-0 text-success">{{ public_recipes }} Public</h6>
                         </div>
                     </div>
                 </div>
                 
-                <div class="col-md-3 col-sm-6 mb-3">
-                    <div class="card bg-warning text-white">
-                        <div class="card-body">
-                            <div class="d-flex justify-content-between">
-                                <div>
-                                    <h4>{{ private_recipes }}</h4>
-                                    <p class="mb-0">Private Recipes</p>
-                                </div>
-                                <div class="align-self-center">
-                                    <i class="bi bi-lock"></i>
-                                </div>
-                            </div>
+                <div class="col-md-3 col-sm-6 mb-2">
+                    <div class="card shadow-sm border-warning">
+                        <div class="card-body py-2 px-2 text-center">
+                            <h6 class="mb-0 text-warning">{{ private_recipes }} Private</h6>
                         </div>
                     </div>
                 </div>
                 
-                <div class="col-md-3 col-sm-6 mb-3">
-                    <div class="card bg-info text-white">
-                        <div class="card-body">
-                            <div class="d-flex justify-content-between">
-                                <div>
-                                    <h4>{{ incomplete_recipes }}</h4>
-                                    <p class="mb-0">Incomplete Recipes</p>
-                                </div>
-                                <div class="align-self-center">
-                                    <i class="bi bi-clock"></i>
-                                </div>
-                            </div>
+                <div class="col-md-3 col-sm-6 mb-2">
+                    <div class="card shadow-sm border-info">
+                        <div class="card-body py-2 px-2 text-center">
+                            <h6 class="mb-0 text-info">{{ incomplete_recipes }} Incomplete</h6>
                         </div>
                     </div>
                 </div>
@@ -152,8 +120,8 @@
                                         </a>
                                     </td>
                                     <td>
-                                        <span class="badge bg-{{ 'danger' if recipe.user.is_admin else 'primary' }}">
-                                            {{ recipe.user.username }}
+                                        <span class="badge bg-{{ 'danger' if recipe.owner.is_admin else 'primary' }}">
+                                            {{ recipe.owner.username }}
                                         </span>
                                     </td>
                                     <td>
